--- a/API/package.json
+++ b/API/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.x",
-    "bezier-easing": "^2.x"
+    "bezier-easing": "^2.x",
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
     "json-diff": "^0.5.x",
