--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "express-static-gzip": "^2.0.6",
     "http-proxy": "^1.18.0",
     "json-diff": "^0.5.4",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "node-hid": "^1.3.1",
     "open": "^7.0.3",
