--- a/viewer/package.json
+++ b/viewer/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "socket.io-client": "^2.3.0",
+    "ts-loader": "8",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
