--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,7 @@
     "chrome-launcher": "^0.13.2",
     "connect-history-api-fallback": "^1.6.0",
     "detect-rpi": "^1.4.0",
-    "dmx": "github:martinHN/dmx#master",
+    "dmx": "^0.2.5",
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.6",
     "http-proxy": "^1.18.0",
@@ -67,13 +67,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
-    "@types/node": "^12.12.38",
+    "@types/node": "^16",
     "@types/socket.io": "^2.1.4",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "eslint": "^7",
-    "eslint-plugin-import": "^2.20.2",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8",
+    "eslint-plugin-import": "^2.26.0",
     "follow-redirects": "^1.11.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "nodemon": "^2.0.3",
@@ -88,7 +87,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "engines": {
-    "node": "^12"
+    "node": "^16"
   },
   "_moduleAliases": {
     "@": "dist/server/src",
